[package]
name = "tis620"
version = "0.0.3"
edition = "2021"
description = "A rust crate to handle Thai Industrial Standard 620 (tis620) characters"
license = "MIT OR Apache-2.0"
categories = ["encoding"]
authors = ["Narongwet Mongkonsatcha <narongwet.m@gmail.com>"]
repository = "https://github.com/nui/tis620"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
hex = "0.4.3"
