[package]
name = "tis620"
version = "0.1.1"
edition = "2021"
description = "A library for handling Thai Industrial Standard 620 (TIS-620) characters"
license = "MIT OR Apache-2.0"
categories = ["encoding"]
keywords = ["encoding", "charset", "thai"]
authors = ["Narongwet Mongkonsatcha <narongwet.m@gmail.com>"]
repository = "https://github.com/nui/tis620"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
encoding_rs = "0.8.30"
hex = "0.4.3"
rand = "0.8.4"

[[bench]]
name = "benchmarks"
harness = false
